--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h2>El grupo de asesinos</h2>
     <img src="images/Feijo.jpeg" alt="FANGjoo" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
     <p>Podría beneficiarle en su carrera brawlistica</p>
-    <img src="images/brainrot_monkey.jpg" alt="brainrot_monkey" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
+    <img src="images/Abascal.jpg" alt="brainrot_monkey" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
     <p>¿Que esconde el mono?</p>
     <img src="images/Diddy.jpg" alt="Diddy" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
     <p>No se puede defender a este pokemon tras sus antecedentes</p>
