--- a/nivelSiguiente.html
+++ b/nivelSiguiente.html
@@ -7,20 +7,32 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { background-color: #fff8dc; }
-    .container { max-width: 600px; margin-top: 100px; }
+    .container { max-width: 1600px; margin-top: 100px; }
     .hidden { display: none; }
   </style>
 </head>
 <body>
-  <div class="container text-center">
-    <h1>Nivel TROLLEADO</h1>
-    
-    <img src="images/1f602.png" alt="Que sus" class="img-fluid xs-4" style="max-height: 1000px; max-width: 1000px;" />
-    
+  <div class="container">
+    <h1>Nivel 3</h1>
+    <p class="lead">La clave está en la <strong> imagen </strong> de este juego.</p>
+
+    <img src="images/Peter.jpg" alt="SERPIENTE" class="img-fluid xs-4" style="max-height: 1000px; max-width: 1000px;" />
+
+    <input type="text" id="claveInput" class="form-control mb-3" placeholder="Clave del nivel 3" />
+    <button class="btn btn-primary" onclick="verificarClave()">Comprobar</button>
+
+    <div id="mensaje" class="mt-3"></div>
+
+    <div id="pista" class="alert alert-success mt-4 hidden">
+      <strong>¡Sí!</strong> Has escapado del nivel 3.
+      <div class="mt-3">
+        <a href="nivelSiguientedelSiguiente.html" class="btn btn-secondary">Ir al Nivel Final</a>
+      </div>
+    </div>
   </div>
 
   <script>
-    const claveCorrecta = "escape";
+    const claveCorrecta = "ඞ";
     function verificarClave() {
       const input = document.getElementById("claveInput").value.trim().toLowerCase();
       const mensaje = document.getElementById("mensaje");
