--- a/nivel5.html
+++ b/nivel5.html
@@ -41,11 +41,11 @@
     <h1 class="mb-4">Nivel 5: El arte del engaño</h1>
 
     <div class="hidden-message">
-        <img src="https://via.placeholder.com/400x200.png?text=Observa+con+atención" alt="Imagen con pista">
+        <img src="images/reinas.jpg" alt="Resuelve la imagen">
     </div>
 
     <div class="mb-4">
-        <label for="claveImagen" class="form-label">¿Qué palabra viste en la imagen?</label>
+        <label for="claveImagen" class="form-label">Inserta las posiciones de las reinas colocadas para resolver el puzzle en orden alfabetico</label>
         <input type="text" id="claveImagen" class="form-control text-center" placeholder="Escribe la clave">
         <button class="btn btn-primary mt-2" onclick="verificarImagen()">Comprobar</button>
         <div id="resultadoImagen" class="mt-2"></div>
@@ -53,49 +53,39 @@
 
     <hr class="my-5">
 
-    <div class="mb-4">
-        <p><strong>Acertijo:</strong> No tiene boca, pero puede responder. No tiene oídos, pero puede escuchar. ¿Qué es?</p>
-        <input type="text" id="claveAcertijo" class="form-control text-center" placeholder="Escribe tu respuesta">
-        <button class="btn btn-primary mt-2" onclick="verificarAcertijo()">Comprobar</button>
-        <div id="resultadoAcertijo" class="mt-2"></div>
-    </div>
 
-    <button id="btnSiguiente" class="btn btn-success mt-4 d-none" onclick="window.location.href='nivel6.html'">
-        ¡Avanza al siguiente nivel!
-    </button>
+    <a id="btnSiguiente" href="https://quizizz.com/join?gc=093848" class="btn btn-dark" style="display: none;">El test final</a>
+    <a id="btnTroll" href="nivel3.html" class="btn btn-dark" style="display: none;">Ganaste</a>
 </div>
 
 <script>
     let imagenOk = false;
-    let acertijoOk = false;
+    let acertijoOk = true;
+    let trollOk = false;
 
     function verificarImagen() {
         const valor = document.getElementById('claveImagen').value.trim().toLowerCase();
         const resultado = document.getElementById('resultadoImagen');
         if (valor === 'claveoculta') {
+            trollOk = true;
+            resultado.innerHTML = '<span class="text-success">¡Correcto!</span>';
+            comprobarTodo();
+            trollOk = false;
+        } else if (valor === 'a2c1f8g3h5' || valor === 'a3b1c7e8h6') {
             imagenOk = true;
             resultado.innerHTML = '<span class="text-success">¡Correcto!</span>';
-            comprobarTodo();
-        } else {
-            resultado.innerHTML = '<span class="text-danger">Incorrecto</span>';
-        }
-    }
-
-    function verificarAcertijo() {
-        const valor = document.getElementById('claveAcertijo').value.trim().toLowerCase();
-        const resultado = document.getElementById('resultadoAcertijo');
-        if (valor === 'eco') {
-            acertijoOk = true;
-            resultado.innerHTML = '<span class="text-success">¡Correcto!</span>';
-            comprobarTodo();
-        } else {
+            comprobarTodo()
+        }else{
             resultado.innerHTML = '<span class="text-danger">Incorrecto</span>';
         }
     }
 
     function comprobarTodo() {
         if (imagenOk && acertijoOk) {
-            document.getElementById('btnSiguiente').classList.remove('d-none');
+            document.getElementById('btnSiguiente').style.display = 'block';
+        }
+        if (trollOk) {
+            document.getElementById('btnTroll').style.display = 'block';
         }
     }
 </script>
