--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <img src="images/Pedro.jpeg" alt="Pedro SURGEz" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
 
     <h2>El grupo de asesinos</h2>
-    <img src="images/Feijo.jpeg" alt="FANGjoo" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
-    <p>Podría beneficiarle en su carrera brawlistica</p>
+    <img src="images/Torrente.png" alt="Torrente" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
+    <p>No es solo pokemon lo que ha capturado</p>
     <img src="images/Abascal.jpg" alt="brainrot_monkey" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
     <p>¿Que esconde el mono?</p>
     <img src="images/Diddy.jpg" alt="Diddy" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
