--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h2>El grupo de asesinos</h2>
     <img src="images/Torrente.png" alt="Torrente" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
     <p>No es solo pokemon lo que ha capturado</p>
-    <img src="images/Abascal.jpg" alt="brainrot_monkey" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
+    <img src="images/brainrot_monkey.jpg" alt="brainrot_monkey" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
     <p>¿Que esconde el mono?</p>
     <img src="images/Diddy.jpg" alt="Diddy" class="img-fluid xs-4" style="max-height: 600px; max-width: 600px;" />
     <p>No se puede defender a este pokemon tras sus antecedentes</p>
