--- a/nivel2.html
+++ b/nivel2.html
@@ -19,17 +19,17 @@
     <p>Teneis que adivinar el personaje ficticio o real que se esconde, una vez lo hayais descubierto a todos, tendréis que ordenarlos del más fuerte al más debil</p>
     <p>SOLO HAY UNA RESPUESTA CORRECTA REAL, no leo lloros, la clave es las iniciales ordenadas de los personajes del más fuerte al más debil</p>
     <ol>
-      <li>GOTTA GO FAST</li>
-      <li>I am speed</li>
-      <li>Él siempre vuelve</li>
-      <li>Yo soy [TITLE CARD]</li>
-      <li>El mejor de COME diez</li>
-      <li>Dragon y bolas</li>
-      <li>BEAAAAAAAR</li>
-      <li>Despite everything, it's still you.</li>
-      <li>Rompiendo cosas mal</li>
-      <li>Vbucks</li>
-      <li>Tiene un hermano que también controla un dragón</li>
+      <li>GOTTA GO FAST/ Es un animal azul</li>
+      <li>I am speed/ Le encanta la copa Piston</li>
+      <li>Él siempre vuelve/ Uno de los dueños de Fazbear</li>
+      <li>Yo soy [TITLE CARD]/ invulnerable, invicto, inexpugnable</li>
+      <li>El mejor de COME diez/ Esta contenido en un reloj verde...</li>
+      <li>Dragon y bolas/ No tiene el Son delante, solo el nombre</li>
+      <li>BEAAAAAAAR/ Pertenece a un juego de movil</li>
+      <li>Despite everything, it's still you./ Leer más pistas te llena de determinación</li>
+      <li>Rompiendo cosas mal/ JESSIEEE</li>
+      <li>Vbucks/ Uno de los defaults</li>
+      <li>Tiene un hermano que también controla un dragón/ Pertenece al clan Shimada, su hermano se llama...</li>
     </ol>
     
     
@@ -61,7 +61,7 @@
       } else {
         mensaje.innerHTML = '<span class="text-danger">Clave incorrecta. Inténtalo de nuevo.</span>';
       }
-      console.log("BUSCA PAGINA WEB")
+      console.log("BUSCA PAGINA WEB, ficción sin limites")
     }
   </script>
 </body>
