--- a/nivel2.html
+++ b/nivel2.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container text-center">
-    <h1>Nivel 2</h1>
+    <h1>Nivel 2: LA FICCIóN sin LIMITES, buscar pagina web</h1>
     <p class="lead">Para comprobar que sabeis de lo que hablais, lo primero de todo se os pondra a prueba con vuestros conocimientos de powerscaler</p>
 
     <p>Teneis que adivinar el personaje ficticio o real que se esconde, una vez lo hayais descubierto a todos, tendréis que ordenarlos del más fuerte al más debil</p>
